# Call-Intelligence

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/output/: index.md
data/output/2026-06-25-santander-agent-audit-25072026/: analysis.md  meta.json
evals/: run_evals.py
output/: index.md
output/2026-06-25-santander-agent-audit-25072026/: transcript.md
src/call_intel/: __init__.py  analyze.py  cli.py  config.py  diarize.py  filename.py  gcalendar.py  gmail.py  google_auth.py  gtasks.py  markdown.py  models.py  pipeline.py  project_context.py  transcribe.py  transcript_parser.py  watcher.py
testing/evals/: run_evals.py
testing/evals/fixtures/: golden_cases.json
testing/tests/: test_config.py  test_transcript_parser.py
tests/: test_cli.py  test_transcript_parser.py
